syntax = "proto3";

package malonaz.ai.v1;

import "buf/validate/validate.proto";
import "google/protobuf/struct.proto";
import "malonaz/ai/v1/jsonschema.proto";

option go_package = "github.com/malonaz/core/genproto/ai/v1";

// Represents a tool that can be called by the AI model.
message Tool {
  // The name of the tool to be called.
  string name = 1 [(buf.validate.field).string.min_len = 1];

  // A description of what the tool does.
  string description = 2 [(buf.validate.field).string.min_len = 1];

  // The json schema of the exected object to be returned.
  JsonSchema json_schema = 3;

  // Metadata about this tool (this is not transmitted to the ai provider).
  // These are applied to any tool call created by this tool.
  map<string, string> metadata = 4;
}

// A tool call that the model wants to invoke.
message ToolCall {
  // The id of this tool call.
  string id = 1 [(buf.validate.field).required = true];

  // The name of the tool to call.
  string name = 2 [(buf.validate.field).required = true];

  // The arguments to call the tool with.
  google.protobuf.Struct arguments = 3 [(buf.validate.field).required = true];

  // Provider specific extra fields.
  google.protobuf.Struct extra_fields = 4;

  // Metadata about this tool call (populated by the tool that created this tool call).
  map<string, string> metadata = 5;
}

// The result of executing a tool call.
message ToolResult {
  // The outcome of the tool execution.
  oneof result {
    option (buf.validate.oneof).required = true;

    // The output returned by the tool execution.
    // May contain structured data (e.g., JSON) or plain text depending on the tool.
    string content = 1;

    // The output returned by the tool execution as structured data.
    google.protobuf.Struct structured_content = 2;

    // Error message if the tool execution failed.
    string error = 3;
  }
}

// Controls which tool(s) the model should use.
message ToolChoice {
  option (buf.validate.message).cel = {
    id: "ai.v1.ToolChoice.mode_not_unspecified"
    message: "mode cannot be TOOL_CHOICE_MODE_UNSPECIFIED"
    expression: "!has(this.mode) || this.mode != 0"
  };

  // The choice.
  oneof choice {
    option (buf.validate.oneof).required = true;

    // Let the model decide whether to call a tool.
    ToolChoiceMode mode = 1 [(buf.validate.field).enum.defined_only = true];

    // Force the model to call a specific tool by name.
    string tool_name = 2;
  }
}

// Mode for tool choice.
enum ToolChoiceMode {
  // Used to detect an unset field.
  TOOL_CHOICE_MODE_UNSPECIFIED = 0;

  // Do not use any tool.
  TOOL_CHOICE_MODE_NONE = 1;

  // Let the model decide whether to call a tool.
  TOOL_CHOICE_MODE_AUTO = 2;

  // Require the model to call at least one tool.
  TOOL_CHOICE_MODE_REQUIRED = 3;
}
